@@ -1,5 +1,5 @@
-noinst_SCRIPTS = core.bash default.eclectic output.bash config.bash
-EXTRA_DIST = core.bash.in default.eclectic.in output.bash.in config.bash.in
+noinst_SCRIPTS = config.bash core.bash default.eclectic multilib.bash output.bash
+EXTRA_DIST = config.bash.in core.bash.in default.eclectic.in multilib.bash.in output.bash.in
 
 %.bash : %.bash.in
 	cp $? $@
