@@ -102,5 +102,13 @@ do_action() {
     )
 }
 
+# has varname item
+has() {
+    local var=${!1} item
+    for item in ${var} ; do
+        [[ ${item} == ${2} ]] && return 0
+    done
+    return 1
+}
 
 # vim: set sw=4 et sts=4 tw=80 :
